Implimented Onclick Listener and more...
Added Recyclerview onclick
added details activities
added newtork error textview
added activity title change based on Top movies or Popular movies.

--- a/Popular-Movies-Stage1/app/src/main/res/values/strings.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Popular-Movies-Stage1</string>
 
-   <!--URLs for our API -->
+    <!--URLs for our API -->
     <string name="base_url">http://api.themoviedb.org/3/movie/</string>
     <string name="popular">popular?api_key</string>
     <string name="top_rated">top_rated?api_key</string>
@@ -9,6 +9,13 @@
     <!-- Image URLs -->
     <string name="image_base_url">http://image.tmdb.org/t/p/w185/</string>
 
-    <string name="key">97416d9cb95fd109aaa5e3025b3063fd</string>
+    <string name="key">=97416d9cb95fd109aaa5e3025b3063fd</string>
     <string name="token">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJhdWQiOiI5NzQxNmQ5Y2I5NWZkMTA5YWFhNWUzMDI1YjMwNjNmZCIsInN1YiI6IjU5MDM3MjNkOTI1MTQxNzdlZTAwMTBlYSIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.E91l9JSkHuT_Hi4y0WxeVaCYa2jgm1XTtiVMDweDEUo</string>
+    <string name="error">A network error has transpired</string>
+    <string name="title_activity_movie_details">MovieDetailsActivity</string>
+
+
+    <string name="pop_movie_title">Popular Movies</string>
+    <string name="top_movie_title">Top Rated Movies</string>
+
 </resources>
