--- a/Popular-Movies-Stage1/app/src/main/res/values/strings.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/values/strings.xml
@@ -8,9 +8,9 @@
     <string name="popular">popular?api_key</string>
     <string name="top_rated">top_rated?api_key</string>
 
+    <!-- APEND YOUR API KEY TO THIS STRING ** NOTE the '=' MUST BE THE FIRST CHAR ** -->
     <string name="key">=</string>
 
-    <!---->
     <string name="error">A network error has transpired</string>
     <string name="title_activity_movie_details">Movie Details</string>
 
