start of Stage 2
Using Android Studio 3.0 canary build

--- a/Popular-Movies-Stage1/app/src/main/res/values/strings.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
 
     <string name="rating_out_of_ten">/10</string>
     <string name="content_discrip_poster_of_the_movie">poster of the movie</string>
+    <string name="favorites">Favorites</string>
 
 </resources>
