finished implementing Data classes
content provider
manifest file
DBHelper
fav_btn logic to insert/delete entry

--- a/Popular-Movies-Stage1/app/src/main/res/values/strings.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/values/strings.xml
@@ -24,5 +24,7 @@
     <string name="favorites">Favorites</string>
 
     <string name="you_tube">http://www.youtube.com/watch?v=</string>
+    <string name="mark_fav">MARK AS FAVORITE</string>
+    <string name="remove_fav">Remove From Favorites</string>
 
 </resources>
