--- a/Popular-Movies-Stage1/app/src/main/res/values/strings.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="top_rated">top_rated?api_key</string>
 
     <!-- APEND YOUR API KEY TO THIS STRING ** NOTE the '=' MUST BE THE FIRST CHAR ** -->
-    <string name="key">=</string>
+    <string name="key">=97416d9cb95fd109aaa5e3025b3063fd</string>
 
     <string name="error">A network error has transpired</string>
     <string name="title_activity_movie_details">Movie Details</string>
